--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
   <link href="css/styles.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script defer src="./js/app.js"></script>
 </head>
 <body>
   <!-- HTML Follows BEM naming conventions 
@@ -63,6 +65,5 @@
     <p><a id="backUp" href="#header">Back to Top</a></p>
     <p>&copy Udacity</p>
   </footer>
-  <script src="./js/app.js"></script>
 </body>
 </html>
